GNOME Bugzilla – Bug 683199
Wrong Accept-Language header in PushUp
Last modified: 2013-01-18 07:50:42 UTC
Accept-Language: LC-ctype=c;lc-numeric=fi-fi;lc-time=fi-fi;lc-collate=fi-fi;lc-monetary=fi-fi;lc-messages=c;lc-paper=c;lc-name= Could be that this is Harmattan-specific; needs more investigation.
nope. On my laptop, setlocale (LC_ALL, NULL) returns LC_CTYPE=en_US.UTF-8;LC_NUMERIC=de_DE.UTF-8;LC_TIME=de_DE.UTF-8;LC_COLLATE=en_US.UTF-8;LC_MONETARY=de_DE.UTF-8;LC_MESSAGES=en_US.UTF-8;LC_PAPER=de_DE.UTF-8;LC_NAME=de_DE.UTF-8;LC_ADDRESS=de_DE.UTF-8;LC_TELEPHONE=de_DE.UTF-8;LC_MEASUREMENT=de_DE.UTF-8;LC_IDENTIFICATION=de_DE.UTF-8 generating an Accept-Language: header with LC-ctype=en-us;q=1, LC-ctype=en;q=0.5. I think the code should just use LC_MESSAGES instead of LC_ALL
Created attachment 231106 [details] [review] Fix Accept-Language header generation
Attachment 231106 [details] pushed as 21fccb6 - Fix Accept-Language header generation