Fix Accept-Language header generation

https://bugzilla.gnome.org/show_bug.cgi?id=683199